2005-06-03	Istvan Varga	<istvan@csounds.com>
	* Engine/oload.c:
	* H/csoundCore.h:
	  added (some) PVOC related functions to API
	* OOps/pvfileio.c:
	  extensively revised code (needs testing): use ANSI C functions
	  for file I/O, removed dependencies on sizeof(long)==4 and endianness,
	  removed limit on number of files
	* util/pvanal.c:
	  allow the use of PVOC-EX format again (still no displays though)

2005-06-03 Victor Lazzarini <Victor.Lazzarini@nuim.ie>
	* OOps/pvfileio.c: removed statics and added csound* to functions;
	 changed all relevant function calls elsewhere in the code to
	 match the new prototypes

2005-06-01 Victor Lazzarini <Victor.Lazzarini@nuim.ie>
	* Opcodes/pvsbasic.c pvsbasic.h added opcode pvsinit for fsig
	initialisation

2005-05-31	Istvan Varga	<istvan@csounds.com>
	* Engine/otran.c:
	  allow global f-signals
	  code changes for faster name lookup in global/local pools
	* Engine/rdorch.c:
	  store line numbers in variables of type 'int' rather than 'short'
	  TODO: clean up file reading (correct handling of EOL characters,
	        use csoundFileOpen(), do not depend on being able to call
		ungetc() multiple times)
		probaly the same needs to be done in sread.c as well
	* H/oload.h:
	  removed many unused typedefs and macros
	* OOps/fftlib.c:
	  fixed crash on 64 bit platforms
	  minor code changes

2005-05-30	Istvan Varga	<istvan@csounds.com>
	* New API functions:
	    csoundAppendOpcodes():
	      appends a list of opcodes (OENTRY*)
	    csoundRegisterResetCallback():
	      adds a function to be called by csoundReset()
	* Top/dl_opcodes.c:
	  unload plugin opcodes (called from csoundReset())
	* Top/dl_opcodes.c, Top/main.c:
	  use API functions for adding opcodes, rather than changing
	  opcodlst directly

2005-05-30  Michael Gogins <gogins@pipeline.com>
	* CsoundVST now supports multiple instantiation of VST plugins;
	it is not completely stable yet.
	* The Mixer opcodes now support multiple instantiation of Csound.